tests/errors/wrong_type_usage/wrong_function_arg_types.meth
int func(int x, str y) {
    print(y);
    return x + 4;
}



func(4, false);